<resources>
    <string name="app_name">F64126147_CH05_practice4</string>
    <string name="ham">漢堡</string>
    <string name="chi">炸雞</string>
    <string name="red">紅茶</string>
    <string name="cof">咖啡</string>
    <string name="half">半</string>
    <string name="no">無</string>
    <string name="les">少</string>
    <string name="gone">去</string>
    <string name="pot">薯條</string>
    <string name="ice">聖代</string>
    <string name="order">請點餐</string>
</resources>